resource cap calculator, initial version
